/*
 * This build file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * user guide available at https://docs.gradle.org/3.3/userguide/tutorial_java_projects.html
 */

apply plugin: 'war'
apply plugin: 'eclipse-wtp'
apply plugin: 'idea'
apply plugin: 'jetty'

// JDK版本
sourceCompatibility = 1.8 
targetCompatibility = 1.8

archivesBaseName = 'blog' // 包名
project.webAppDirName = "src/main/webapp" // webApp目录
version = '1.0.0' // 版本
	
// 解决编译时警告：编码GBK的不可映射字符
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

// 全局参数配置
ext {
	servletVersion = '2.5'
    freemarkerVersion = '2.3.26-incubating'
	jspVersion = '2.2'
	jstlVersion = '1.2'

	springVersion = '4.3.3.RELEASE'
    fileuploadVersion = '1.3.2'
	mybatisVersion = '3.4.0'
	mybatisSpringVersion = '1.3.0'
	mysqlVersion = '5.1.38'
    dbcpVersion = '1.4'
	
	fastJsonVersion = '1.2.4'
	collectionVersion = '4.0'

	junitVersion = '4.12'
}

// 依赖的仓库
repositories {
    // 使用本地目录
    flatDir {
        dirs '~/javeWeb/localLib'
    }
    mavenLocal() // 使用本地缓存
    maven{ url "http://maven.aliyun.com/nexus/content/groups/public"}    
    mavenCentral() // 使用中央仓库
    jcenter()
}

// 依赖的插件
dependencies {
	// 使用本项目libs目录
    compile fileTree(dir: 'libs', include: ['*.jar'])
	
//    // Servlet web
	providedCompile "javax.servlet:servlet-api:${servletVersion}"
//	providedCompile "javax.servlet.jsp:jsp-api:${jspVersion}"
//	providedCompile "javax.servlet:jstl:${jstlVersion}"

    // velocity
    compile "org.freemarker:freemarker:${freemarkerVersion}"
    compile "org.springframework:spring-context-support:${springVersion}"

    // Spring web
    compile "org.springframework:spring-web:${springVersion}"
    compile "org.springframework:spring-webmvc:${springVersion}"
    compile "commons-fileupload:commons-fileupload:${fileuploadVersion}"

    // Spring DAO
    compile "org.springframework:spring-jdbc:${springVersion}"
    compile "org.springframework:spring-tx:${springVersion}"
    
    // MyBatis
    compile "org.mybatis:mybatis:${mybatisVersion}"
    compile "org.mybatis:mybatis-spring:${mybatisSpringVersion}"
    
    // mysql
    compile "mysql:mysql-connector-java:${mysqlVersion}"
    compile "commons-dbcp:commons-dbcp:${dbcpVersion}"
    
    // json
    compile "com.alibaba:fastjson:${fastJsonVersion}"
    
    // utility
    compile "org.apache.commons:commons-collections4:${collectionVersion}"

    // test
    testCompile "junit:junit:${junitVersion}"
}

// Jetty配置项,使能jettyStop任务
httpPort = 8080
stopPort = 8090
stopKey = "stop"

// 实现Jetty静态资源热加载,修改base URL(默认为项目名)
[jettyRun, jettyRunWar]*.with {
    contextPath ""
    reload "automatic"
    scanIntervalSeconds 1
}

